Continued redesigning layout of navigation menu and homepage

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     </head>
     <body>
         <div class="sidenav">
-            <header>
-                <span>Alyssa Song</span>
+            <header class="centered">
+                <img src="img/profile.jpg" id="img-profile">
+                <span class="overlay">Alyssa Song</span>
             </header>
             <nav class="nav-list">
-                <a href="#homepage">Home</a>
-                <a href="#about">About</a>
-                <a href="#projects">Projects</a>
-                <a href="#!" class="dropdown-btn">Contact<i class="fa fa-caret-left"></i></a>
+                <a href="#about">about</a>
+                <a href="#projects">projects</a>
+                <a href="#!" class="dropdown-btn">contact<i class="fa fa-caret-left"></i></a>
                 <div class="contact-dropdown">
                     <a href="tel:905 385 8858">(905) 385-8858</a>
                     <a href="mailto:alyssasong2008@gmail.com">alyssasong2008@gmail.com</a>
@@ -25,32 +25,23 @@
                     <a href="https://github.com/alyssa-song" target="_blank">github</a>
                 </div>
             </nav>
+            <button id="resume">
+                <a href="Resume 2021.pdf" target="_blank">resume</a>
+            </button>
           </div>
         <div class="main">
-            <section id="homepage">
-                <div class="container">
-                    <div class="home-block">
-                        <img src="img/profile.jpg" class="img-profile">
-                        <div class="intro">
-                            <h1>Hi! I'm Alyssa</h1>
-                            <p>computer science student</p>
-                            <p>@ the university of waterloo</p>
-                            <p>seeking summer 2021 internship opportunities in software development</p>
-                        </div>
-                    </div>
-                    <div class="centered">
-                        <button id="resume">
-                            <a href="Resume 2021.pdf" target="_blank">resume</a>
-                        </button>
-                    </div>
-                </div>
-            </section>
             <section id="about">
                 <div class="container">
-                    <h1>more about me</h1>
-                    <p>Hi, my name's Alyssa and I'm a second year computer science student at the University of Waterloo.</p>
+                    <div class="intro">
+                        <h1>Hi! I'm Alyssa</h1>
+                        <p>I'm a 2nd year Computer Science student at the University of Waterloo.</p>
+                        <p>I worked at Axsium Group as an solutions developer where I was in charge of the testing and were given some development opportunities. 
+                            I'm currently seeking summer 2021 internship opportunities in software development.</p>
+                        <p>Check out some of my projects!</p>
+                    </div>
                 </div>
             </section>
+            <img src="img/page-break.png" id="page-break">
             <section id="projects">
                 <div class="container">
                     <h1>projects</h1>
