finished projects section
Added content for projects section and fine tuned layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Alyssa Song">
         <title>Alyssa Song | Portfolio</title>
         <link rel="stylesheet" href="./css/style.css">
@@ -12,7 +12,7 @@
         <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
         <div class="sidenav">
             <header style="text-align: center;">
-                <img src="img/profile.jpg" id="img-profile">
+                <img src="img/profile.jpg" id="profile-img">
                 <span class="overlay">Alyssa Song</span>
             </header>
             <nav class="nav-list">
@@ -49,14 +49,34 @@
                     <h1>Projects</h1>
                     <div class="scrolling-projects">
                         <div class="project-col">
-                            <h2>Project 1</h2>
-                            <img src="img/website.JPG" class="project-img">
+                            <img src="img/website1.jpg" class="project-img" id="website-img">
+                            <span>
+                                <h2>Personal Website</h2>
+                                <p class="tools">TOOLS: html, css, javascript and jquery</p>
+                                <p class="description">This ongoing project is the product of my interest in web-design. 
+                                    My goal is to explore new ideas and improve my website and make it more dynamic and responsive. 
+                                </p>
+                            </span>
                         </div>
                         <div class="project-col">
-                            <h2>Project 2</h2>
+                            <img src="img/planner1.jpg" class="project-img" id="planner-img">
+                            <span>
+                                <h2>android app: MyPlanner</h2>
+                                <p class="tools">TOOLS: java, android studios</p>
+                                <p class="description">As I manage my time best through planning, I wanted to create an app that had all of my desired features.
+                                    This included a task list and a calendar to set dates and notifications.
+                                </p>
+                            </span>
                         </div>
                         <div class="project-col">
-                            <h2>Project 3</h2>
+                            <img src="img/website1.jpg" class="project-img" id="website-img">
+                            <span>
+                                <h2>Tetris</h2>
+                                <p class="tools">TOOLS: c#, windows forms application, visual studio</p>
+                                <p class="description">Tetris has always been one of my favourite games, 
+                                    so I recreated it in Visual Studio using C# and Windows Forms Application.
+                                </p>
+                            </span>
                         </div>
                     </div>
                 </div>
