--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
         <div class="sidenav">
             <header style="text-align: center;">
-                <img src="img/profile.jpg" id="profile-img">
-                <span class="overlay">Alyssa Song</span>
+                <img src="img/profile-img.jpg" id="profile-img">
             </header>
             <nav class="nav-list">
                 <a href="#about">about</a>
@@ -34,7 +33,8 @@
                     <div class="intro">
                         <h1>Hi! I'm Alyssa</h1>
                         <p>I'm a 2nd year Computer Science student at the University of Waterloo. In my spare time, I enjoy hiking, baking and playing board games.</p>
-                        <p>Previously, I worked as a solutions developer where I was in charge of testing and given opportunities to explore development. 
+                        <p>Previously, I worked as a solutions developer where I was in charge of testing and given some development opportunities.
+                            You can refer to my resume in the menu bar for more details.
                             I'm currently seeking summer 2021 internship opportunities in software development.</p>
                         <p>Check out some of my projects below!</p>
                     </div>
@@ -46,7 +46,13 @@
             </div>
             <section id="projects">
                 <div class="container">
-                    <h1>Projects</h1>
+                    <div style="display: inline;">
+                        <h1>Projects
+                            <a href="https://github.com/alyssa-song" target="_blank">
+                                <i class="fa fa-github" aria-hidden="true"></i>
+                            </a>
+                        </h1>
+                    </div>
                     <div class="scrolling-projects">
                         <div class="project-col">
                             <img src="img/website1.jpg" class="project-img" id="website-img">
@@ -69,7 +75,7 @@
                             </span>
                         </div>
                         <div class="project-col">
-                            <img src="img/website1.jpg" class="project-img" id="website-img">
+                            <img src="img/tetris1.jpg" class="project-img" id="tetris-img">
                             <span>
                                 <h2>Tetris</h2>
                                 <p class="tools">TOOLS: c#, windows forms application, visual studio</p>
