fix image naming issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
         <div class="sidenav">
             <header style="text-align: center;">
-                <img src="img/profile-img.jpg" id="profile-img">
+                <img src="img/profile-img.JPG" id="profile-img">
             </header>
             <nav class="nav-list">
                 <a href="#about">about</a>
@@ -75,7 +75,7 @@
                             </span>
                         </div>
                         <div class="project-col">
-                            <img src="img/tetris1.jpg" class="project-img" id="tetris-img">
+                            <img src="img/tetris1.JPG" class="project-img" id="tetris-img">
                             <span>
                                 <h2>Tetris</h2>
                                 <p class="tools">TOOLS: c#, windows forms application, visual studio</p>
