Update website information

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
                 <a href="#projects">projects</a>
                 <a href="#!" class="dropdown-btn">contact<i class="fa fa-caret-left"></i></a>
                 <div class="contact-dropdown">
-                    <a href="tel:905 385 8858">(905) 385-8858</a>
+                    <a href="tel:905 537 5757">(905) 537-5757</a>
                     <a href="mailto:alyssasong2008@gmail.com">alyssasong2008@gmail.com</a>
                     <a href="https://www.linkedin.com/in/alyssa-song/" target="_blank">linkedin</a>
                     <a href="https://github.com/alyssa-song" target="_blank">github</a>
                 </div>
             </nav>
-            <a id="resume" href="Resume 2021.pdf" target="_blank">resume</a>
+            <a id="resume" href="Resume 2021-F.pdf" target="_blank">resume</a>
           </div>
         <div class="main">
             <section id="about">
                 <div class="container">
                     <div class="intro">
                         <h1>Hi! I'm Alyssa</h1>
-                        <p>I'm a 2nd year Computer Science student at the University of Waterloo. In my spare time, I enjoy hiking, baking and playing board games.</p>
-                        <p>Previously, I worked as a solutions developer where I was in charge of testing and given some development opportunities.
+                        <p>I'm a 3rd year Computer Science student at the University of Waterloo. In my spare time, I enjoy hiking, baking and playing board games.</p>
+                        <p>My current work experience includes working as an associate solutions developer and a software developer co-op.
                             You can refer to my resume in the menu bar for more details.
-                            I'm currently seeking summer 2021 internship opportunities in software development.</p>
+                            I'm currently seeking winter 2022 internship opportunities in software development.</p>
                         <p>Check out some of my projects below!</p>
                     </div>
                 </div>
