quick website info update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="https://github.com/alyssa-song" target="_blank">github</a>
                 </div>
             </nav>
-            <a id="resume" href="Resume 2021-F.pdf" target="_blank">resume</a>
+            <a id="resume" href="Resume 2022.pdf" target="_blank">resume</a>
           </div>
         <div class="main">
             <section id="about">
@@ -33,9 +33,9 @@
                     <div class="intro">
                         <h1>Hi! I'm Alyssa</h1>
                         <p>I'm a 3rd year Computer Science student at the University of Waterloo. In my spare time, I enjoy hiking, baking and playing board games.</p>
-                        <p>My current work experience includes working as an associate solutions developer and a software developer co-op.
+                        <p>My current work experience includes three 4-month internships as a software developer.
                             You can refer to my resume in the menu bar for more details.
-                            I'm currently seeking winter 2022 internship opportunities in software development.</p>
+                            I'm currently seeking Fall 2022 internship opportunities in software development.</p>
                         <p>Check out some of my projects below!</p>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                         <div class="project-col">
                             <img src="img/planner1.jpg" class="project-img" id="planner-img">
                             <span>
-                                <h2>android app: MyPlanner</h2>
+                                <h2>Android App: MyPlanner</h2>
                                 <p class="tools">TOOLS: java, android studios</p>
                                 <p class="description">As I manage my time best through planning, I wanted to create an app that had all of my desired features.
                                     This included a task list and a calendar to set dates and notifications.
